fixed alignment issues

--- a/src/components/HeroSection/index.css
+++ b/src/components/HeroSection/index.css
@@ -304,9 +304,9 @@
     bottom: 0;
     top: 0;
     margin-top: 60px;
-    margin-left: 1020px;
+    margin-left: 1050px;
     width: 31%;
-    height: 650px;
+    height: 550px;
 }
 
 @media screen and (max-width: 1300px) {
